fixed button alignment

--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -156,6 +156,9 @@
     .cs-right {
       max-width: (542/16rem);
       margin: auto;
+
+      display: flex;
+      flex-direction: column;
     }
 
     .cs-topper {
@@ -223,7 +226,7 @@
     }
 
     .cs-button-solid {
-      margin-top: (32/16rem);
+      margin: auto;
     }
   }
 }
