--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -95,38 +95,40 @@
       color: #fff;
     }
 
-    .cs-button-1 {
-      font-size: 1rem;
-      /* 46px - 56px */
-      line-height: clamp(2.875rem, 8vw, 3.5rem);
+    .cs-button-solid {
+      font-size: (16/16rem);
+      line-height: (56/16rem);
       text-decoration: none;
       font-weight: 700;
       margin: auto;
       color: #fff;
-      padding: 0 1.5rem;
+      padding: 0 (24/16rem);
       background-color: var(--primary);
+      border-radius: (4/16rem);
       display: inline-block;
       position: relative;
       z-index: 1;
-      border-radius: (4/16rem);
-    }
-    .cs-button-1:hover:before {
-      width: 100%;
-    }
-    .cs-button-1:before {
-      /* hover box */
-      content: "";
-      position: absolute;
-      display: block;
-      height: 100%;
-      width: 0%;
-      background: #000;
-      opacity: 1;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      transition: width 0.3s;
-      background-color: var(--secondary);
+
+      &:before {
+        content: "";
+        position: absolute;
+        display: block;
+        height: 100%;
+        width: 0%;
+        background: var(--secondary);
+        opacity: 1;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        border-radius: (4/16rem);
+        transition: width 0.3s;
+      }
+
+      &:hover {
+        &:before {
+          width: 100%;
+        }
+      }
     }
   }
 }
