--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -58,6 +58,7 @@
       position: relative;
       z-index: 1;
       box-sizing: border-box;
+      border-radius: (4/16rem);
 
       &:before {
         content: "";
@@ -70,6 +71,7 @@
         left: 0;
         z-index: -1;
         transition: width 0.3s;
+        border-radius: (4/16rem);
       }
 
       &:hover {
@@ -503,7 +505,7 @@
       text-decoration: none;
       font-weight: 700;
       text-align: center;
-      margin: 0;
+      margin: auto;
       color: #fff;
       min-width: (150/16rem);
       padding: 0 (24/16rem);
@@ -674,6 +676,7 @@
       position: relative;
       z-index: 1;
       box-sizing: border-box;
+      border-radius: (4/16rem);
 
       &:before {
         content: "";
@@ -686,6 +689,7 @@
         left: 0;
         z-index: -1;
         transition: width 0.3s;
+        border-radius: (4/16rem);
       }
 
       &:hover {
