--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -70,25 +70,26 @@
   }
 
   // Button - can be replaced using CodeStitch's "Button" Stitches
-  .cs-button-1 {
+  .cs-button-solid {
     font-size: 1rem;
     /* 46px - 56px */
     line-height: clamp(2.875rem, 8vw, 3.5rem);
     text-decoration: none;
     font-weight: 700;
-    margin: auto;
+    text-align: center;
+    width: auto;
     color: #fff;
     padding: 0 1.5rem;
     background-color: var(--primary);
     display: inline-block;
     position: relative;
     z-index: 1;
-    border-radius: (5.5/16rem);
+    border-radius: (4/16rem);
   }
-  .cs-button-1:hover:before {
+  .cs-button-solid:hover:before {
     width: 100%;
   }
-  .cs-button-1:before {
+  .cs-button-solid:before {
     /* hover box */
     content: "";
     position: absolute;
@@ -96,7 +97,6 @@
     height: 100%;
     width: 0%;
     background: #000;
-    background-color: var(--secondary);
     opacity: 1;
     top: 0;
     left: 0;
